--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
