refactory transcript viewer

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 
+src/assets/mock-data/*
+!src/assets/mock-data/.gitkeep
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
